force-app/main/default/objects/Reward_And_Recognition__c/Reward_And_Recognition__c.object-meta.xml
<CustomObject>
    <label>Reward And Recognition</label>
    <nameField>
        <displayFormat>REC{0000000}</displayFormat>
        <label>Nominee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rewards And Recognitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>