force-app/main/default/objects/Reward_And_Recognition__c/fields/Award_Type__c.field-meta.xml
<CustomField>
    <fullName>Award_Type__c</fullName>
    <label>Award Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best Entrepreneur</fullName>
            </value>
            <value>
                <fullName>Most Professional</fullName>
            </value>
            <value>
                <fullName>Rising Star</fullName>
            </value>
            <value>
                <fullName>Rock Star</fullName>
            </value>
            <value>
                <fullName>Service Awards</fullName>
            </value>
            <value>
                <fullName>Recognize</fullName>
            </value>
            <value>
                <fullName>Shout Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>