force-app/main/default/objects/Reward_And_Recognition__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiscal Year</label>
    <referenceTo>Fiscal_Year__c</referenceTo>
    <relationshipLabel>Rewards And Recognitions</relationshipLabel>
    <relationshipName>Rewards_And_Recognitions</relationshipName>
    <type>Lookup</type>
</CustomField>