force-app/main/default/objects/Reward_And_Recognition__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>TextArea</type>
</CustomField>