force-app/main/default/objects/Reward_And_Recognition__c/fields/Nomination_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Nomination_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nomination Submitted</label>
    <type>Checkbox</type>
</CustomField>