force-app/main/default/objects/Reward_And_Recognition__c/fields/of_Secondary_Nominations__c.field-meta.xml
<CustomField>
    <fullName>of_Secondary_Nominations__c</fullName>
    <label># of Secondary Nominations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>