force-app/main/default/objects/Reward_And_Recognition__c/fields/of_Total_Nominations__c.field-meta.xml
<CustomField>
    <fullName>of_Total_Nominations__c</fullName>
    <formula>of_Primary_Nominations__c +  of_Secondary_Nominations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Total Nominations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>