force-app/main/default/objects/Reward_And_Recognition__c/fields/Primary_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Primary_Nomination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Nomination</label>
    <type>Checkbox</type>
</CustomField>