force-app/main/default/objects/Reward_And_Recognition__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We have created this checkbox to track the records processed in the batch class BatchToCreateScoringForAwards to avoid reprocessing the records to calculate the nomination counts.</description>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>