force-app/main/default/objects/Reward_And_Recognition__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EMS_TM_Project__c.EMS_TM_Status__c</field>
            <operation>equals</operation>
            <value>Ongoing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EMS_TM_Project__c</referenceTo>
    <relationshipLabel>Rewards And Recognitions</relationshipLabel>
    <relationshipName>Rewards_And_Recognitions</relationshipName>
    <type>Lookup</type>
</CustomField>