force-app/main/default/objects/Reward_And_Recognition__c/fields/Reason_for_award__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_award__c</fullName>
    <label>Reason for award</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>