force-app/main/default/objects/Reward_And_Recognition__c/fields/Recognization_By__c.field-meta.xml
<CustomField>
    <fullName>Recognization_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Stores the information about the user of user who created this</inlineHelpText>
    <label>Recognization By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rewards_And_Recognitions</relationshipName>
    <type>Lookup</type>
</CustomField>