force-app/main/default/objects/Reward_And_Recognition__c/fields/Recognization_By_Text__c.field-meta.xml
<CustomField>
    <fullName>Recognization_By_Text__c</fullName>
    <label>Recognization By (Text)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>