force-app/main/default/objects/Reward_And_Recognition__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rewards And Recognitions</relationshipLabel>
    <relationshipName>Rewards_And_Recognitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>