force-app/main/default/objects/Reward_And_Recognition__c/fields/Secondary_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Nomination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Nomination</label>
    <type>Checkbox</type>
</CustomField>