force-app/main/default/objects/Reward_And_Recognition__c/fields/Shared_Resource__c.field-meta.xml
<CustomField>
    <fullName>Shared_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rewards And Recognitions (Shared Resource)</relationshipLabel>
    <relationshipName>Rewards_And_Recognitions1</relationshipName>
    <type>Lookup</type>
</CustomField>