force-app/main/default/objects/Reward_And_Recognition__c/fields/Shout_Out_Heading__c.field-meta.xml
<CustomField>
    <fullName>Shout_Out_Heading__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>