force-app/main/default/objects/Reward_And_Recognition__c/fields/System_Predicted_Status__c.field-meta.xml
<CustomField>
    <fullName>System_Predicted_Status__c</fullName>
    <label>System Predicted Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Might Looser</fullName>
                <label>Most Likely Winner</label>
            </value>
            <value>
                <fullName>Might Winner</fullName>
            </value>
            <value>
                <fullName>Winner</fullName>
            </value>
            <value>
                <fullName>Looser</fullName>
                <label>Potential Winner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>