force-app/main/default/objects/Reward_And_Recognition__c/fields/Type_of_Shout_Out__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Shout_Out__c</fullName>
    <label>Type of Shout Outs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recognition</fullName>
            </value>
            <value>
                <fullName>Personalized Thank You</fullName>
            </value>
            <value>
                <fullName>Incentives</fullName>
            </value>
            <value>
                <fullName>Make a Difference</fullName>
            </value>
            <value>
                <fullName>Great Job</fullName>
            </value>
            <value>
                <fullName>Kudos</fullName>
            </value>
            <value>
                <fullName>Star Performer</fullName>
            </value>
            <value>
                <fullName>Pat on the back!</fullName>
            </value>
            <value>
                <fullName>Chief Fun Officer</fullName>
            </value>
            <value>
                <fullName>The Innovation Ninja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>