force-app/main/default/objects/Reward_And_Recognition__c/fields/Types_of_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Recognition__c</fullName>
    <label>Types of Recognition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monetary Rewards</fullName>
            </value>
            <value>
                <fullName>Performance-Based Recognition</fullName>
            </value>
            <value>
                <fullName>Peer Recognition</fullName>
            </value>
            <value>
                <fullName>Prize Recognition</fullName>
            </value>
            <value>
                <fullName>Annual Awards</fullName>
                <isActive>false</isActive>
                <label>Annual Awards</label>
            </value>
            <value>
                <fullName>Shout-Out</fullName>
                <isActive>false</isActive>
                <label>Shout-Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>