force-app/main/default/objects/Reward_And_Recognition__c/recordTypes/Nominations.recordType-meta.xml
<RecordType>
    <fullName>Nominations</fullName>
    <active>true</active>
    <label>Nominations</label>
</RecordType>