force-app/main/default/objects/Reward_And_Recognition__c/recordTypes/Scoring.recordType-meta.xml
<RecordType>
    <fullName>Scoring</fullName>
    <active>true</active>
    <description>Used  for Annual Awards Scoring</description>
    <label>Scoring</label>
</RecordType>