force-app/main/default/objects/Reward_And_Recognition__c/recordTypes/Winners.recordType-meta.xml
<RecordType>
    <fullName>Winners</fullName>
    <active>true</active>
    <label>Winners</label>
</RecordType>