force-app/main/default/objects/Reward_And_Recognition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Award_Type__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Comments__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Resource__c</columns>
    <columns>Status__c</columns>
    <columns>Types_of_Recognition__c</columns>
    <columns>Type_of_Shout_Out__c</columns>
    <columns>Recognization_By__c</columns>
    <columns>Type__c</columns>
    <columns>of_Primary_Nominations__c</columns>
    <columns>of_Secondary_Nominations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>