force-app/main/default/objects/Reward_And_Recognition__c/listViews/Annual_Awards_Nominations_Completed.listView-meta.xml
<ListView>
    <fullName>Annual_Awards_Nominations_Completed</fullName>
    <columns>NAME</columns>
    <columns>Award_Type__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Resource__c</columns>
    <columns>Status__c</columns>
    <columns>Recognization_By__c</columns>
    <columns>Primary_Nomination__c</columns>
    <columns>Secondary_Nomination__c</columns>
    <columns>Nomination_Submitted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Annual Award</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Nominated</value>
    </filters>
    <filters>
        <field>Recognization_By__c</field>
        <operation>equals</operation>
        <value>Testing Employee1</value>
    </filters>
    <label>Annual Awards Nominations (Nominated)</label>
</ListView>