force-app/main/default/objects/Reward_And_Recognition__c/listViews/Annual_Awards_Scoring.listView-meta.xml
<ListView>
    <fullName>Annual_Awards_Scoring</fullName>
    <columns>NAME</columns>
    <columns>Award_Type__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Resource__c</columns>
    <columns>Status__c</columns>
    <columns>Recognization_By__c</columns>
    <columns>Reason_for_award__c</columns>
    <columns>of_Primary_Nominations__c</columns>
    <columns>of_Secondary_Nominations__c</columns>
    <columns>of_Total_Nominations__c</columns>
    <columns>System_Predicted_Status__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reward_And_Recognition__c.Scoring</value>
    </filters>
    <label>Annual Awards Scoring</label>
</ListView>