force-app/main/default/objects/Reward_And_Recognition__c/listViews/Annual_Awards_Winners.listView-meta.xml
<ListView>
    <fullName>Annual_Awards_Winners</fullName>
    <columns>NAME</columns>
    <columns>Award_Type__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Resource__c</columns>
    <columns>Status__c</columns>
    <columns>Recognization_By__c</columns>
    <columns>Reason_for_award__c</columns>
    <columns>Primary_Nomination__c</columns>
    <columns>Secondary_Nomination__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Annual Award</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Winner</value>
    </filters>
    <label>Annual Awards Winners</label>
</ListView>