force-app/main/default/objects/Reward_And_Recognition__c/listViews/Recognition.listView-meta.xml
<ListView>
    <fullName>Recognition</fullName>
    <columns>NAME</columns>
    <columns>Types_of_Recognition__c</columns>
    <columns>Project__c</columns>
    <columns>Resource__c</columns>
    <columns>Recognization_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Recognize</value>
    </filters>
    <label>Recognition</label>
</ListView>